chore: Update my email address
Signed-off-by: Awiteb <a@4rs.nl>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "salvo-captcha"
 version = "0.1.0"
 rust-version = "1.75.0"
 edition = "2021"
-authors = ["Awiteb <awitb@hotmail.com>"]
+authors = ["Awiteb <a@4rs.nl>"]
 description = "A captcha middleware for Salvo framework."
 license = "MIT"
 repository = "https://github.com/TheAwiteb/salvo-captcha"
