chore: Update `github.com` urls to `git.4rs.nl`
Signed-off-by: Awiteb <a@4rs.nl>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 authors = ["Awiteb <a@4rs.nl>"]
 description = "A captcha middleware for Salvo framework."
 license = "MIT"
-repository = "https://github.com/TheAwiteb/salvo-captcha"
+repository = "https://git.4rs.nl/awiteb/salvo-captcha"
 documentation = "https://docs.rs/salvo-captcha"
 readme = "README.md"
 keywords = ["salvo", "captcha", "middleware"]
