--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tempfile = "3.9"
 tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
 base64 = "0.21"
 salvo = { version = ">= 0.65, < 0.69", default-features = false, features = ["server", "http1","http2", "affix"] }
+rstest = "0.22.0"
 
 [[example]]
 name = "simple_login"
