--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ either = { version = "1.13.0", default-features = false }
 cacache-storage = ["dep:cacache"]
 simple_generator = ["dep:captcha"]
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [dev-dependencies]
 tempfile = "3.9"
 tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
